[package]
name = "raknet"
version = "0.1.0"
description = "RakNet implementation written in Rust language"
readme = "README.md"
repository = "https://github.com/rust-mc/raknet.git"
license = "Apache-2.0"
authors = ["N3WC0DER <sawkin.nik@gmail.com>"]
edition = "2021"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
byte-order = "0.3.0"
log = "0.4.17"
rakmacro = { path = "rakmacro" }
rand = "0.8.5"
lazy_static = "1.4.0"

[workspace]
members = ["test"]