[package]
name = "rakmacro"
version = "0.1.0"
description = "Macros for RakNet"
repository = "https://github.com/rust-mc/raknet.git"
license = "Apache-2.0"
authors = ["N3WC0DER <sawkin.nik@gmail.com>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.54"
syn = { version = "2.0.11", features = ["full"] }
quote = "1.0"
byte-order = "0.3.0"